// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Sections/Grid Section Address 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    className="gap-y-4"
    grid={false}
    inset={true}
    tinted={true}
    title="Section Title"
  >
    <section
      className="grid-section"
    >
      <header
        className="grid-section__header"
      >
        <h2
          className="grid-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="grid-section__inner is-tinted is-inset gap-y-4"
      >
        <GridSection
          columns={4}
          subtitle="Residence Address"
        >
          <section
            className="grid-section"
          >
            <header
              className="grid-section__header mb-0"
            >
              <h3
                className="grid-section__subtitle"
              >
                Residence Address
              </h3>
            </header>
            <div
              className="grid-section__inner md:grid md:grid-cols-4 md:gap-8"
            >
              <GridCell
                span={3}
              >
                <article
                  className="grid-item md:col-span-3"
                >
                  <ViewItem
                    label="Street Address"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Street Address
                      </span>
                      <span
                        className="view-item__value"
                      >
                        112 Springfield St.
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Apt Unit #"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Apt Unit #
                      </span>
                      <span
                        className="view-item__value"
                      >
                        1
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell
                span={2}
              >
                <article
                  className="grid-item md:col-span-2"
                >
                  <ViewItem
                    label="City"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        City
                      </span>
                      <span
                        className="view-item__value"
                      >
                        Oakland
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="State"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        State
                      </span>
                      <span
                        className="view-item__value"
                      >
                        CA
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Zip"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Zip
                      </span>
                      <span
                        className="view-item__value"
                      >
                        94577
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
            </div>
          </section>
        </GridSection>
        <GridSection
          columns={4}
          subtitle="Work Address"
        >
          <section
            className="grid-section"
          >
            <header
              className="grid-section__header mb-0"
            >
              <h3
                className="grid-section__subtitle"
              >
                Work Address
              </h3>
            </header>
            <div
              className="grid-section__inner md:grid md:grid-cols-4 md:gap-8"
            >
              <GridCell
                span={3}
              >
                <article
                  className="grid-item md:col-span-3"
                >
                  <ViewItem
                    label="Street Address"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Street Address
                      </span>
                      <span
                        className="view-item__value"
                      >
                        112 Springfield St.
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Apt Unit #"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Apt Unit #
                      </span>
                      <span
                        className="view-item__value"
                      >
                        1
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell
                span={2}
              >
                <article
                  className="grid-item md:col-span-2"
                >
                  <ViewItem
                    label="City"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        City
                      </span>
                      <span
                        className="view-item__value"
                      >
                        Oakland
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="State"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        State
                      </span>
                      <span
                        className="view-item__value"
                      >
                        CA
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Zip"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Zip
                      </span>
                      <span
                        className="view-item__value"
                      >
                        94577
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
            </div>
          </section>
        </GridSection>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Address Fields 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    className="mt-8"
    grid={false}
    title="Section Title"
  >
    <section
      className="grid-section"
    >
      <header
        className="grid-section__header"
      >
        <h2
          className="grid-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="grid-section__inner mt-8"
      >
        <GridSection
          columns={6}
          title="My Group"
        >
          <section
            className="grid-section"
          >
            <header
              className="grid-section__header"
            >
              <h2
                className="grid-section__title"
              >
                My Group
              </h2>
            </header>
            <div
              className="grid-section__inner md:grid md:grid-cols-6 md:gap-8"
            >
              <GridCell
                span={4}
              >
                <article
                  className="grid-item md:col-span-4"
                >
                  <Field
                    label="Street Address"
                    name="label1"
                    placeholder="Enter text"
                    register={[Function]}
                  >
                    <div
                      className="field"
                    >
                      <label
                        className="label"
                        htmlFor="label1"
                      >
                        Street Address
                      </label>
                      <div
                        className="control"
                      >
                        <input
                          aria-describedby="label1-error"
                          aria-invalid={false}
                          className="input"
                          id="label1"
                          name="label1"
                          placeholder="Enter text"
                          type="text"
                        />
                      </div>
                    </div>
                  </Field>
                </article>
              </GridCell>
              <GridCell
                span={2}
              >
                <article
                  className="grid-item md:col-span-2"
                >
                  <Field
                    label="Address 2"
                    name="label2"
                    placeholder="Enter text"
                    register={[Function]}
                  >
                    <div
                      className="field"
                    >
                      <label
                        className="label"
                        htmlFor="label2"
                      >
                        Address 2
                      </label>
                      <div
                        className="control"
                      >
                        <input
                          aria-describedby="label2-error"
                          aria-invalid={false}
                          className="input"
                          id="label2"
                          name="label2"
                          placeholder="Enter text"
                          type="text"
                        />
                      </div>
                    </div>
                  </Field>
                </article>
              </GridCell>
              <GridCell
                span={2}
              >
                <article
                  className="grid-item md:col-span-2"
                >
                  <Field
                    label="City"
                    name="label3"
                    placeholder="Enter text"
                    register={[Function]}
                  >
                    <div
                      className="field"
                    >
                      <label
                        className="label"
                        htmlFor="label3"
                      >
                        City
                      </label>
                      <div
                        className="control"
                      >
                        <input
                          aria-describedby="label3-error"
                          aria-invalid={false}
                          className="input"
                          id="label3"
                          name="label3"
                          placeholder="Enter text"
                          type="text"
                        />
                      </div>
                    </div>
                  </Field>
                </article>
              </GridCell>
              <Field
                label="State"
                name="label4"
                placeholder="Enter text"
                register={[Function]}
              >
                <div
                  className="field"
                >
                  <label
                    className="label"
                    htmlFor="label4"
                  >
                    State
                  </label>
                  <div
                    className="control"
                  >
                    <input
                      aria-describedby="label4-error"
                      aria-invalid={false}
                      className="input"
                      id="label4"
                      name="label4"
                      placeholder="Enter text"
                      type="text"
                    />
                  </div>
                </div>
              </Field>
              <Field
                label="Zip"
                name="label5"
                placeholder="Enter text"
                register={[Function]}
              >
                <div
                  className="field"
                >
                  <label
                    className="label"
                    htmlFor="label5"
                  >
                    Zip
                  </label>
                  <div
                    className="control"
                  >
                    <input
                      aria-describedby="label5-error"
                      aria-invalid={false}
                      className="input"
                      id="label5"
                      name="label5"
                      placeholder="Enter text"
                      type="text"
                    />
                  </div>
                </div>
              </Field>
            </div>
          </section>
        </GridSection>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Button Grid 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    columns={2}
    tightSpacing={true}
  >
    <section
      className="grid-section"
    >
      <div
        className="grid-section__inner md:grid md:grid-cols-2 md:gap-2"
      >
        <GridCell>
          <article
            className="grid-item"
          >
            <Button
              fullWidth={true}
              onClick={[Function]}
            >
              <button
                className="button is-fullwidth"
                onClick={[Function]}
              >
                I'm a Button!
              </button>
            </Button>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <Button
              fullWidth={true}
              onClick={[Function]}
            >
              <button
                className="button is-fullwidth"
                onClick={[Function]}
              >
                Another Button
              </button>
            </Button>
          </article>
        </GridCell>
        <GridCell
          span={2}
        >
          <article
            className="grid-item md:col-span-2"
          >
            <Button
              fullWidth={true}
              onClick={[Function]}
              styleType="is-primary"
            >
              <button
                className="button is-primary is-fullwidth"
                onClick={[Function]}
              >
                I'm a Button!
              </button>
            </Button>
          </article>
        </GridCell>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Default Three Columns 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    subtitle="Subsection Title"
    title="Section Title"
  >
    <section
      className="grid-section"
    >
      <header
        className="grid-section__header mb-0"
      >
        <h2
          className="grid-section__title"
        >
          Section Title
        </h2>
        <h3
          className="grid-section__subtitle mt-4"
        >
          Subsection Title
        </h3>
      </header>
      <div
        className="grid-section__inner md:grid md:grid-cols-3 md:gap-8"
      >
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="First Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Middle Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Last Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Date of Birth"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Email"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Email
                </span>
                <span
                  className="view-item__value"
                >
                  lisa@gmail.com
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              helper="Cell"
              label="Phone"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Cell
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              helper="Work"
              label="Second Phone"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Second Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Work
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Perferred Contact"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Perferred Contact
                </span>
                <span
                  className="view-item__value"
                >
                  Phone
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Four Columns Edit 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    columns={4}
    edit="Edit"
    inset={true}
    subtitle="Subsection Title"
    tinted={true}
    title="Very Long Section Title That Wraps on Mobile"
  >
    <section
      className="grid-section"
    >
      <header
        className="grid-section__header"
      >
        <h2
          className="grid-section__title"
        >
          Very Long Section Title That Wraps on Mobile
        </h2>
        <span
          className="ml-auto"
        >
          <a
            className="edit-link"
          >
            Edit
          </a>
        </span>
        <h3
          className="grid-section__subtitle mt-4"
        >
          Subsection Title
        </h3>
      </header>
      <div
        className="grid-section__inner is-tinted is-inset md:grid md:grid-cols-4 md:gap-8"
      >
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="First Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Middle Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Last Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Date of Birth"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Email"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Email
                </span>
                <span
                  className="view-item__value"
                >
                  lisa@gmail.com
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              helper="Cell"
              label="Phone"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Cell
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              helper="Work"
              label="Second Phone"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Second Phone
                </span>
                <span
                  className="view-item__value"
                >
                  111-222-3333
                </span>
                <span
                  className="view-item__helper"
                >
                  Work
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Perferred Contact"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Perferred Contact
                </span>
                <span
                  className="view-item__value"
                >
                  Phone
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Four Columns Fields 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    columns={4}
    title="Section Title"
  >
    <section
      className="grid-section"
    >
      <header
        className="grid-section__header"
      >
        <h2
          className="grid-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="grid-section__inner md:grid md:grid-cols-4 md:gap-8"
      >
        <Field
          label="Alpha"
          name="label1"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label1"
            >
              Alpha
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label1-error"
                aria-invalid={false}
                className="input"
                id="label1"
                name="label1"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Beta"
          name="label2"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label2"
            >
              Beta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label2-error"
                aria-invalid={false}
                className="input"
                id="label2"
                name="label2"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Gamma"
          name="label3"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label3"
            >
              Gamma
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label3-error"
                aria-invalid={false}
                className="input"
                id="label3"
                name="label3"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Delta"
          name="label4"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label4"
            >
              Delta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label4-error"
                aria-invalid={false}
                className="input"
                id="label4"
                name="label4"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Epsilon"
          name="label5"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label5"
            >
              Epsilon
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label5-error"
                aria-invalid={false}
                className="input"
                id="label5"
                name="label5"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Zeta"
          name="label6"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label6"
            >
              Zeta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label6-error"
                aria-invalid={false}
                className="input"
                id="label6"
                name="label6"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Eta"
          name="label7"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label7"
            >
              Eta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label7-error"
                aria-invalid={false}
                className="input"
                id="label7"
                name="label7"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Theta"
          name="label8"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label8"
            >
              Theta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label8-error"
                aria-invalid={false}
                className="input"
                id="label8"
                name="label8"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Grid Section Single Column 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    grid={false}
    inset={true}
    tinted={true}
  >
    <section
      className="grid-section"
    >
      <div
        className="grid-section__inner is-tinted is-inset"
      >
        <GridSection
          className="md:gap-y-2"
          columns={1}
          subtitle="My Group"
        >
          <section
            className="grid-section"
          >
            <header
              className="grid-section__header mb-0"
            >
              <h3
                className="grid-section__subtitle"
              >
                My Group
              </h3>
            </header>
            <div
              className="grid-section__inner md:grid md:grid-cols-1 md:gap-8 md:gap-y-2"
            >
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="First Name"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        First Name
                      </span>
                      <span
                        className="view-item__value"
                      >
                        Lisa
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Middle Name"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Middle Name
                      </span>
                      <span
                        className="view-item__value"
                      >
                        S
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Last Name"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Last Name
                      </span>
                      <span
                        className="view-item__value"
                      >
                        Jones
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Date of Birth"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Date of Birth
                      </span>
                      <span
                        className="view-item__value"
                      >
                        01/01/1985
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Email"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Email
                      </span>
                      <span
                        className="view-item__value"
                      >
                        lisa@gmail.com
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    helper="Cell"
                    label="Phone"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Phone
                      </span>
                      <span
                        className="view-item__value"
                      >
                        111-222-3333
                      </span>
                      <span
                        className="view-item__helper"
                      >
                        Cell
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    helper="Work"
                    label="Second Phone"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Second Phone
                      </span>
                      <span
                        className="view-item__value"
                      >
                        111-222-3333
                      </span>
                      <span
                        className="view-item__helper"
                      >
                        Work
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Preferred Contact"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Preferred Contact
                      </span>
                      <span
                        className="view-item__value"
                      >
                        Phone
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
            </div>
          </section>
        </GridSection>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Grid Section Single Column Warn 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    grid={false}
  >
    <section
      className="grid-section"
    >
      <div
        className="grid-section__inner"
      >
        <ViewItem
          label="Application Number"
        >
          <div
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Application Number
            </span>
            <span
              className="view-item__value"
            >
              APP-0001002002
            </span>
          </div>
        </ViewItem>
        <GridSection
          grid={false}
          tinted={true}
        >
          <section
            className="grid-section"
          >
            <div
              className="grid-section__inner is-tinted"
            >
              <div
                className="my-4 p-4"
              >
                <fieldset>
                  <legend
                    className="field-note mb-4 text-gray-750"
                  >
                    Confirm this application is valid:
                  </legend>
                  <div
                    className="field-group--inline"
                  >
                    <div
                      className="field "
                    >
                      <input
                        id="testvalidappkeep"
                        name="testvalidapp"
                        type="radio"
                        value="keep"
                      />
                      <label
                        className="font-semibold"
                        htmlFor="testvalidappkeep"
                      >
                        Keep
                      </label>
                    </div>
                    <div
                      className="field "
                    >
                      <input
                        id="testvalidappremove"
                        name="testvalidapp"
                        type="radio"
                        value="remove"
                      />
                      <label
                        className="font-semibold"
                        htmlFor="testvalidappremove"
                      >
                        Remove
                      </label>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </section>
        </GridSection>
        <GridSection
          className="md:gap-y-4"
          columns={1}
          inset={true}
          subtitle="My Group"
          tinted={true}
        >
          <section
            className="grid-section"
          >
            <header
              className="grid-section__header mb-0"
            >
              <h3
                className="grid-section__subtitle"
              >
                My Group
              </h3>
            </header>
            <div
              className="grid-section__inner is-tinted is-inset md:grid md:grid-cols-1 md:gap-8 md:gap-y-4"
            >
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    flagged={true}
                    label="First Name"
                  >
                    <div
                      className="view-item is-flagged"
                    >
                      <span
                        className="view-item__label"
                      >
                        First Name
                      </span>
                      <span
                        className="view-item__value"
                      >
                        Lisa
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    flagged={true}
                    label="Middle Name"
                  >
                    <div
                      className="view-item is-flagged"
                    >
                      <span
                        className="view-item__label"
                      >
                        Middle Name
                      </span>
                      <span
                        className="view-item__value"
                      >
                        S
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    flagged={true}
                    label="Last Name"
                  >
                    <div
                      className="view-item is-flagged"
                    >
                      <span
                        className="view-item__label"
                      >
                        Last Name
                      </span>
                      <span
                        className="view-item__value"
                      >
                        Jones
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    flagged={true}
                    label="Date of Birth"
                  >
                    <div
                      className="view-item is-flagged"
                    >
                      <span
                        className="view-item__label"
                      >
                        Date of Birth
                      </span>
                      <span
                        className="view-item__value"
                      >
                        01/01/1985
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    label="Email"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Email
                      </span>
                      <span
                        className="view-item__value"
                      >
                        lisa@gmail.com
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    helper="Cell"
                    label="Phone"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Phone
                      </span>
                      <span
                        className="view-item__value"
                      >
                        111-222-3333
                      </span>
                      <span
                        className="view-item__helper"
                      >
                        Cell
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <GridCell>
                <article
                  className="grid-item"
                >
                  <ViewItem
                    helper="Work"
                    label="Second Phone"
                  >
                    <div
                      className="view-item"
                    >
                      <span
                        className="view-item__label"
                      >
                        Second Phone
                      </span>
                      <span
                        className="view-item__value"
                      >
                        111-222-3333
                      </span>
                      <span
                        className="view-item__helper"
                      >
                        Work
                      </span>
                    </div>
                  </ViewItem>
                </article>
              </GridCell>
              <ViewItem
                label="Preferred Contact"
              >
                <div
                  className="view-item"
                >
                  <span
                    className="view-item__label"
                  >
                    Preferred Contact
                  </span>
                  <span
                    className="view-item__value"
                  >
                    Phone
                  </span>
                </div>
              </ViewItem>
            </div>
          </section>
        </GridSection>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Grid Section Table 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    grid={false}
    inset={true}
    tinted={true}
    title="Section Title"
  >
    <section
      className="grid-section"
    >
      <header
        className="grid-section__header"
      >
        <h2
          className="grid-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="grid-section__inner is-tinted is-inset"
      >
        <MinimalTable
          data={
            Array [
              Object {
                "dob": "05/01/1985",
                "name": "Jim Halpert",
                "relationship": "Husband",
              },
              Object {
                "dob": "05/01/1975",
                "name": "Michael Scott",
                "relationship": "Friend",
              },
              Object {
                "dob": "05/01/1985",
                "name": "Jim Halpert",
                "relationship": "Husband",
              },
            ]
          }
          headers={
            Object {
              "dob": "application.household.member.dateOfBirth",
              "name": "t.name",
              "relationship": "t.relationship",
            }
          }
        >
          <Component
            cellClassName="px-5 py-3"
            data={
              Array [
                Object {
                  "dob": "05/01/1985",
                  "name": "Jim Halpert",
                  "relationship": "Husband",
                },
                Object {
                  "dob": "05/01/1975",
                  "name": "Michael Scott",
                  "relationship": "Friend",
                },
                Object {
                  "dob": "05/01/1985",
                  "name": "Jim Halpert",
                  "relationship": "Husband",
                },
              ]
            }
            headers={
              Object {
                "dob": "application.household.member.dateOfBirth",
                "name": "t.name",
                "relationship": "t.relationship",
              }
            }
            tableClassName="td-plain th-plain"
          >
            <div
              style={
                Object {
                  "overflowX": "auto",
                }
              }
            >
              <table
                className="w-full text-sm td-plain th-plain"
              >
                <thead>
                  <Component>
                    <tr>
                      <Component
                        key="header-0"
                      >
                        <th>
                          Name
                        </th>
                      </Component>
                      <Component
                        key="header-1"
                      >
                        <th>
                          Relationship
                        </th>
                      </Component>
                      <Component
                        key="header-2"
                      >
                        <th>
                          Date of Birth
                        </th>
                      </Component>
                    </tr>
                  </Component>
                </thead>
                <tbody>
                  <Component
                    id="standardrow-0"
                    key="standardrow-0"
                  >
                    <tr
                      id="standardrow-0"
                    >
                      <Component
                        className="px-5 py-3"
                        headerLabel="name"
                        key="standardcol-0"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="name"
                        >
                          Jim Halpert
                        </td>
                      </Component>
                      <Component
                        className="px-5 py-3"
                        headerLabel="relationship"
                        key="standardcol-1"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="relationship"
                        >
                          Husband
                        </td>
                      </Component>
                      <Component
                        className="px-5 py-3"
                        headerLabel="dob"
                        key="standardcol-2"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="dob"
                        >
                          05/01/1985
                        </td>
                      </Component>
                    </tr>
                  </Component>
                  <Component
                    id="standardrow-1"
                    key="standardrow-1"
                  >
                    <tr
                      id="standardrow-1"
                    >
                      <Component
                        className="px-5 py-3"
                        headerLabel="name"
                        key="standardcol-0"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="name"
                        >
                          Michael Scott
                        </td>
                      </Component>
                      <Component
                        className="px-5 py-3"
                        headerLabel="relationship"
                        key="standardcol-1"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="relationship"
                        >
                          Friend
                        </td>
                      </Component>
                      <Component
                        className="px-5 py-3"
                        headerLabel="dob"
                        key="standardcol-2"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="dob"
                        >
                          05/01/1975
                        </td>
                      </Component>
                    </tr>
                  </Component>
                  <Component
                    id="standardrow-2"
                    key="standardrow-2"
                  >
                    <tr
                      id="standardrow-2"
                    >
                      <Component
                        className="px-5 py-3"
                        headerLabel="name"
                        key="standardcol-0"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="name"
                        >
                          Jim Halpert
                        </td>
                      </Component>
                      <Component
                        className="px-5 py-3"
                        headerLabel="relationship"
                        key="standardcol-1"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="relationship"
                        >
                          Husband
                        </td>
                      </Component>
                      <Component
                        className="px-5 py-3"
                        headerLabel="dob"
                        key="standardcol-2"
                      >
                        <td
                          className="px-5 py-3"
                          data-label="dob"
                        >
                          05/01/1985
                        </td>
                      </Component>
                    </tr>
                  </Component>
                </tbody>
              </table>
            </div>
          </Component>
        </MinimalTable>
      </div>
    </section>
  </GridSection>
</div>
`;

exports[`Storyshots Sections/Grid Section Two Columns 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <GridSection
    columns={2}
    title="Section Title"
  >
    <section
      className="grid-section"
    >
      <header
        className="grid-section__header"
      >
        <h2
          className="grid-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="grid-section__inner md:grid md:grid-cols-2 md:gap-8"
      >
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="First Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  First Name
                </span>
                <span
                  className="view-item__value"
                >
                  Lisa
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Middle Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Middle Name
                </span>
                <span
                  className="view-item__value"
                >
                  S
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Last Name"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Last Name
                </span>
                <span
                  className="view-item__value"
                >
                  Jones
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
        <GridCell>
          <article
            className="grid-item"
          >
            <ViewItem
              label="Date of Birth"
            >
              <div
                className="view-item"
              >
                <span
                  className="view-item__label"
                >
                  Date of Birth
                </span>
                <span
                  className="view-item__value"
                >
                  01/01/1985
                </span>
              </div>
            </ViewItem>
          </article>
        </GridCell>
      </div>
    </section>
  </GridSection>
</div>
`;
